--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,23 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>YoutubeK5E2AVpwsko</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<head>
+   <meta charset="utf-8">
+   <title>YoutubeK5E2AVpwsko</title>
+   <base href="/">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <app-root></app-root>
+   <app-root><div class="sampleContainer">
+         <div class="loader">
+             <span class="dot dot_1"></span>
+             <span class="dot dot_2"></span>
+             <span class="dot dot_3"></span>
+             <span class="dot dot_4"></span>
+         </div>
+     </div></app-root>
 </body>
+
 </html>
